--- a/test/fixtures/plants.yml
+++ b/test/fixtures/plants.yml
@@ -1,11 +1,19 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  img_url: MyString
-  info: MyText
+  title: MyString
+  light: MyText
+  temp: MyText
+  water: MyText
+  soil: MyText
+  feed: MyText
+  tip: MyText
 
 two:
-  name: MyString
-  img_url: MyString
-  info: MyText
+  title: MyString
+  light: MyText
+  temp: MyText
+  water: MyText
+  soil: MyText
+  feed: MyText
+  tip: MyText
